--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 "editor.detectIndentation": false,
-"workbench.editor.enablePreview": false
+"workbench.editor.enablePreview": false,
+"editor.tabSize": 2
 }
